[package]
name = "lindenmayer"
version = "0.3.0"
license = "MIT"
authors = ["SymmetricChaos <ajfraebel@gmail.com>"]
description = "Memory Efficient Lindenmayer-Systems"
keywords = ["lindemayer", "l-system", "lsystem", "grammar", "formal-grammar"]
categories = ["mathematics", "algorithms"]
edition = "2021"
repository = "https://github.com/SymmetricChaos/lindenmayer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rustc-hash = "1.1.0"